--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <div id="sus">
       <h1 id="sussies">0</h1>
-      <img src="images/Red.png" tabindex="0" onclick="everyClick()" id="amogus">
+      <img src="Red.png" tabindex="0" onclick="everyClick()" id="amogus">
     </div>
     <div id="impo">
       <h1>Shop</h1>
